<resources>
    <string name="app_name">Monicca</string>
    <string name="toolbar_financial_checkup">Financial Checkup</string>
    <string name="toolbar_education_plan">Education Plan</string>
    <string name="toolbar_goal_base">Goal Base</string>
    <string name="toolbar_personal_advisor">Personal Advisor</string>
    <string name="intro_desc_img">Intro Images</string>
    <string name="intro_first_title">WELCOME. LET US INTRODUCE MONICCA</string>
    <string name="intro_first_desc">An app powered by artificial intelligence\nand designed to give you accurate\nfinancial calculation and planning.</string>
    <string name="intro_second_title">SPECIAL FEATURE. GOAL BASE</string>
    <string name="intro_second_desc">Our personal robo-advisor goal base.\nSpecially crafted to help you fulfilling\nthe variety of your financial goals.</string>
    <string name="intro_third_title">BUILD YOUR OWN PORTFOLIO</string>
    <string name="intro_third_desc">Monicca aims to help you in creating\nand improving the performance of your\ndiversified portfolio.</string>
    <string name="intro_fourth_title">FEEDBACK. MARKET INTELLIGENCE</string>
    <string name="intro_fourth_desc">And, we utilizes dynamic and real-time\nmarket data to give feasible and\ncomprehensive financial advises for you.</string>
    <string name="intro_btn_skip">skip</string>
    <string name="intro_btn_next">next</string>
    <string name="intro_btn_gotit">got it!</string>
    <string name="signin_desc_img">Monicca App Logo</string>
    <string name="signin_hint_email">Email Address</string>
    <string name="signin_hint_password">Password</string>
    <string name="signin_btn_signin">sign in</string>
    <string name="signin_text_signup">Don\'t Have an Account?</string>
    <string name="signin_btn_signup">Sign up!</string>
    <string name="signin_btn_demo">DEMO</string>
    <string name="signup_desc_img">Sign Up Header</string>
    <string name="signup_hint_email">Email</string>
    <string name="signup_hint_password">Password</string>
    <string name="signup_hint_income">Current Income</string>
    <string name="signup_btn_signup">sign up</string>
    <string name="signup_text_haveaccount">Already Have an Account?</string>
    <string name="signup_btn_signin">Sign In!</string>
    <string name="main_desc_icon">Main Feature Icon</string>
    <string name="main_fc">Financial Checkup</string>
    <string name="main_ep">Education Plan</string>
    <string name="main_gb">Goal Base</string>
    <string name="main_pa">Personal Advisor</string>
    <string name="navdrawer_home">Home</string>
    <string name="navdrawer_history">History</string>
    <string name="navdrawer_settings">Settings</string>
    <string name="navdrawer_logout">Log Out</string>
    <string name="fc_desc_img">Financial Check Illustration Photo</string>
    <string name="fc_text_title">FINANCIAL CHECK</string>
    <string name="fc_text_desc">Checkup tool to help you find out current financial condition and give recommendation on how to plan the better one.</string>
    <string name="fc_btn_start">start</string>
    <string name="fc_text_header">PLEASE FILL IN REQUIRED DATA BELOW</string>
    <string name="fc_text_accinfo">ACCOUNT INFORMATION</string>
    <string name="fc_hint_balance">Current Balance</string>
    <string name="fc_hint_income">Monthly Current Income</string>
    <string name="fc_hint_savings">Monthly Current Savings</string>
    <string name="fc_hint_instalment">Monthly Current Instalment</string>
    <string name="fc_btn_afa">ask for advice</string>
    <string name="fc_text_titleresult">ANALYSIS RESULT</string>
    <string name="fc_text_financialconditionresult">Your financial condition is</string>
    <string name="fc_desc_indicator">Financial Condition Indicator</string>
    <string name="fc_text_recommends">MONICCA RECOMMENDS</string>
    <string name="fc_text_balanceresult">Ideal Minimum Balance</string>
    <string name="fc_text_savingsresult">Ideal Minimum Monthly Savings</string>
    <string name="fc_text_instalmentresult">Ideal Maximum Monthly Instalment</string>
    <string name="fc_btn_save">save result</string>
    <string name="fc_text_titlehistory">FINANCIAL CHECK HISTORY</string>
    <string name="fc_desc_dropdownicon">Dropdown Icon</string>
    <string name="fc_btn_home">back to home</string>
    <string name="ep_desc_img">Education Plan Illustration Photo</string>
    <string name="ep_text_title">EDUCATION PLAN</string>
    <string name="ep_text_desc">An education planner calculator to determine how much money you should save to fund your education in the future.</string>
    <string name="ep_btn_start">start</string>
    <string name="ep_text_header">PLEASE FILL IN REQUIRED DATA BELOW</string>
    <string name="ep_text_appinfo">APPLICANT INFORMATION</string>
    <string name="ep_hint_appname">Applicant Name</string>
    <string name="ep_hint_appage">Applicant Age (Max 25 y.o)</string>
    <string name="ep_hint_insname">Desired Institution Name</string>
    <string name="ep_text_desedulvl">Desired Education Level</string>
    <string name="ep_btn_next">next</string>
    <string name="ep_text_headersec">PLEASE FILL IN REQUIRED DATA BELOW</string>
    <string name="ep_text_insinfo">DESIRED INSTITUTION INFORMATION</string>
    <string name="ep_hint_entfee">Institution Entrance Fee</string>
    <string name="ep_hint_tuifee">Institution Tuition Fee</string>
    <string name="ep_hint_annfee">Institution Annual Fee</string>
    <string name="ep_text_marinfo">MARKET INFORMATION</string>
    <string name="ep_text_interest_title">Average interest on Indonesian Banks</string>
    <string name="ep_text_interest">Interest: 0.96% / Year</string>
    <string name="ep_text_inflation_rate">Based on Bank Indonesia</string>
    <string name="ep_text_inflation">Inflation Rate: 5.00% / Year</string>
    <string name="ep_text_edu_cost">Based on ZapFinance survey</string>
    <string name="ep_text_edu">Education Cost: 15.10% / Year</string>
    <string name="ep_btn_afa">ask for advice</string>
    <string name="ep_text_titleresult">ANALYSIS RESULT</string>
    <string name="ep_text_appname">Application Name</string>
    <string name="ep_text_insname">Institution Name</string>
    <string name="ep_text_edulvl">Education Level</string>
    <string name="ep_text_enroll">Enroll Time</string>
    <string name="ep_text_togo">Years to go</string>
    <string name="ep_text_rec">MONICCA RECOMMENDS</string>
    <string name="ep_desc_dropdownicon">Dropdown Icon</string>
    <string name="ep_btn_save">save result</string>
    <string name="ep_text_titlehistory">EDUCATION PLAN HISTORY</string>
    <string name="ep_btn_home">back to home</string>
    <string name="gb_desc_bg">Goal Base Illustration Photo</string>
    <string name="gb_desc_icon">Goal Base Feature Icon</string>
    <string name="gb_text_title">GOAL BASE</string>
    <string name="gb_text_desc">Simple planner tool that help you to find out how much you have to save monthly or yearly to achieve your desired goals.</string>
    <string name="gb_text_header">PLEASE FILL IN REQUIRED DATA BELOW</string>
    <string name="gb_text_objinfo">OBJECT INFORMATION</string>
    <string name="gb_text_desobj">Desired Object</string>
    <string name="gb_hint_objname">Object Name or Title</string>
    <string name="gb_hint_objprice">Object Current Price</string>
    <string name="gb_text_deadline">Target Deadline</string>
    <string name="gb_hint_deadline">0</string>
    <string name="gb_text_marinfo">MARKET INFORMATION</string>
    <string name="gb_text_interest_title">Average interest on Indonesian Banks</string>
    <string name="gb_text_interest">Interest: 0.96% / Year</string>
    <string name="gb_text_car_rate">Based on Kementerian Perindustrian</string>
    <string name="gb_text_car">Car price inflation: 7.5% / Year</string>
    <string name="gb_text_bike_rate">Based on Astra Honda Motor survey</string>
    <string name="gb_text_bike">Bike price inflation: 3% / Year</string>
    <string name="gb_text_wedding_rate">Based on seputarpernikahan.com survey</string>
    <string name="gb_text_wedding">Wedding fee inflation: 12.5% / Year</string>
    <string name="gb_text_trip_rate">Based on Kementerian Perhubungan</string>
    <string name="gb_text_trip">Trip fee inflation: 15% / Year</string>
    <string name="gb_text_gadget_rate">Based on APKOMINDO survey</string>
    <string name="gb_text_gadget">Gadget price deflation: 36% / Year</string>
    <string name="gb_btn_afa">ask for advice</string>
    <string name="gb_text_titleresult">ANALYSIS RESULT</string>
    <string name="gb_text_objprice">Current Price or Cost</string>
    <string name="gb_text_estprice">Estimate Price or Cost</string>
    <string name="gb_text_rec">MONICCA RECOMMENDS</string>
    <string name="gb_desc_dropdownicon">Dropdown Icon</string>
    <string name="gb_btn_save">save result</string>
    <string name="gb_text_titlehistory">GOAL BASE HISTORY</string>
    <string name="gb_btn_home">back to home</string>
    <string name="pa_desc_img">Personal Advisor Illustration Photo</string>
    <string name="pa_text_title">PERSONAL ADVISOR</string>
    <string name="pa_text_desc">An expert system-based feature to help you get recommendations and advices based on your answers.</string>
    <string name="pa_btn_under_development">UNDER DEVELOPMENT</string>
    <string name="pa_save_title">HOW DO YOU SPEND MONEY TO THIS DAY?</string>
    <string name="pa_save_one">I’ve mostly saved more money than I’ve spent.</string>
    <string name="pa_save_two">I usually spend more money than I have.</string>
    <string name="pa_debt_title">ARE YOU A SAVER OR SPENDER?</string>
    <string name="pa_debt_one">In the past year, I have always paid my credit card bill in full each month.</string>
    <string name="pa_tol_title">TOLERANCE FOR AMBIGUITY QUESTIONS</string>
    <string name="pa_tol_one">I\'m always open to other\'s opinion.</string>
    <string name="pa_tol_two">I always feel comfortable in new environment.</string>
    <string name="pa_tol_three">I always see problem from different perspectives.</string>
    <string name="pa_tol_four">I always aware of my environment.</string>
    <string name="pa_tol_five">I\'m a fast decision maker.</string>
    <string name="pa_tol_six">I always seek informations before solving problem.</string>
    <string name="pa_tol_seven">I believe that every problem has solution.</string>
    <string name="pa_tol_eight">I\'m always critical in solving problem.</string>
    <string name="pa_goals_title">PERSONAL GOALS QUESTIONS</string>
    <string name="pa_goals_one">I know what to do for the next 5 years.</string>
    <string name="pa_goals_two">I know how long it takes to achieve my goals.</string>
    <string name="pa_goals_three">I know how to achieve my goals.</string>
    <string name="pa_goals_four">I know what motivates my goals.</string>
    <string name="pa_goals_five">I focus my efforts toward a better future.</string>
    <string name="pa_job_title">JOB SATISFACTION QUESTIONS</string>
    <string name="pa_job_one">I would describe my current job as my dream job.</string>
    <string name="pa_job_two">I believe i\'m paid what i deserve.</string>
    <string name="pa_job_three">The work i do is fully appreciated.</string>
    <string name="pa_ent_title">ENTREPRENEURSHIP QUESTIONS</string>
    <string name="pa_ent_one">Independence is more important to me than job security.</string>
    <string name="pa_ent_two">I readily adapt to changing circumstances. I like variety.</string>
    <string name="pa_ent_three">I see myself in a successful business someday.</string>
    <string name="pa_text_answerone">Strongly Disagree</string>
    <string name="pa_text_answertwo">Disagree</string>
    <string name="pa_text_answerthree">Agree</string>
    <string name="pa_text_answerfour">Strongly Agree</string>
    <string name="pa_btn_next">next</string>
    <string name="pa_btn_afa">ask for advice</string>
</resources>