<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/group_two"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_button_home"
            android:icon="@drawable/navdrawer_home"
            android:title="@string/navdrawer_home" />

        <item
            android:id="@+id/nav_button_history"
            android:icon="@drawable/navdrawer_history"
            android:title="@string/navdrawer_history" />

    </group>

    <item android:id="@+id/nav_button_settings"
        android:icon="@drawable/navdrawer_settings"
        android:title="@string/navdrawer_settings" />

    <item android:id="@+id/nav_button_logout"
        android:icon="@drawable/navdrawer_logout"
        android:title="@string/navdrawer_logout" />

</menu>
