<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EEEEEE"
    android:clickable="true"
    android:orientation="vertical"
    tools:context="id.astrajingga.monicca.features.fc.FragmentFcMain">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="center"
        android:paddingLeft="40dp"
        android:paddingRight="40dp">

        <!-- image -->
        <ImageView
            android:id="@+id/fc_image_logo"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_centerInParent="true"
            android:contentDescription="@string/fc_desc_img"
            android:src="@drawable/main_btn_fc" />

        <!-- title -->
        <TextView
            android:id="@+id/fc_text_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/fc_image_logo"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="4dp"
            android:text="@string/fc_text_title"
            android:textAppearance="?android:textAppearanceMedium" />

        <!-- desc -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/fc_text_logo"
            android:background="#FFFFFF"
            android:padding="4dp"
            android:text="@string/fc_text_desc"
            android:textAlignment="center" />

    </RelativeLayout>

    <!-- button -->
    <Button
        android:id="@+id/fcmain_button_start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_button"
        android:text="@string/fc_btn_start"
        android:textColor="#FFFFFF"
        android:textStyle="bold" />

</LinearLayout>
