<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:orientation="vertical"
    tools:context="id.astrajingga.monicca.features.ep.EpCalculate">

    <include layout="@layout/main_appbar_container" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:clickable="true">

        <!-- background photo -->
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/ep_desc_img"
            android:scaleType="centerCrop"
            android:src="@drawable/img_cover_education_plan" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="true"
            android:orientation="vertical">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="5">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:orientation="vertical"
                    android:paddingLeft="40dp"
                    android:paddingRight="40dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:text="@string/ep_text_insinfo"
                        android:textColor="@color/white"
                        android:textStyle="bold"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:background="@drawable/field_bg_white"
                        android:orientation="vertical"
                        android:paddingBottom="8dp"
                        android:paddingLeft="16dp"
                        android:paddingRight="16dp"
                        android:paddingTop="8dp">

                        <!-- current entrance fee field -->
                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="4dp"
                            android:textColorHint="@color/silver">

                            <EditText
                                android:id="@+id/epcalculate_edittext_entrancefee"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/ep_hint_entfee"
                                android:imeOptions="actionNext"
                                android:drawableRight="@drawable/ic_idr"
                                android:inputType="number|phone"
                                android:maxLength="17"
                                android:maxLines="1" />

                        </android.support.design.widget.TextInputLayout>

                        <!-- tuition fee field -->
                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="4dp"
                            android:textColorHint="@color/silver">

                            <EditText android:id="@+id/epcalculate_edittext_tuitionfee"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/ep_hint_tuifee"
                                android:imeOptions="actionNext"
                                android:drawableRight="@drawable/ic_idr"
                                android:inputType="number|phone"
                                android:maxLength="17"
                                android:maxLines="1" />

                        </android.support.design.widget.TextInputLayout>

                        <!-- annual fee field -->
                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColorHint="@color/silver">

                            <EditText android:id="@+id/epcalculate_edittext_annualfee"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/ep_hint_annfee"
                                android:imeOptions="actionDone"
                                android:inputType="number|phone"
                                android:drawableRight="@drawable/ic_idr"
                                android:maxLength="17"
                                android:maxLines="1" />

                        </android.support.design.widget.TextInputLayout>

                    </LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:text="@string/ep_text_marinfo"
                        android:textColor="@color/white"
                        android:textStyle="bold"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/field_bg_white"
                        android:orientation="vertical"
                        android:paddingBottom="8dp"
                        android:paddingLeft="16dp"
                        android:paddingRight="16dp"
                        android:paddingTop="8dp">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="0dp"
                                android:layout_weight="1"
                                android:textSize="12sp"
                                android:text="@string/ep_text_interest_title"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="0dp"
                                android:layout_weight="1"
                                android:text="@string/ep_text_interest"/>

                        </LinearLayout>

                        <!-- line -->
                        <View
                            android:layout_width="match_parent"
                            android:layout_height="0.5dp"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginBottom="4dp"
                            android:layout_marginTop="4dp"
                            android:background="@color/silver" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="0dp"
                                android:layout_weight="1"
                                android:textSize="12sp"
                                android:text="@string/ep_text_inflation_rate"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="0dp"
                                android:layout_weight="1"
                                android:text="@string/ep_text_inflation"/>

                        </LinearLayout>

                        <!-- line -->
                        <View
                            android:layout_width="match_parent"
                            android:layout_height="0.5dp"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginBottom="4dp"
                            android:layout_marginTop="4dp"
                            android:background="@color/silver" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="0dp"
                                android:layout_weight="1"
                                android:textSize="12sp"
                                android:text="@string/ep_text_edu_cost"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="0dp"
                                android:layout_weight="1"
                                android:text="@string/ep_text_edu"/>

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

            </ScrollView>

        </LinearLayout>

    </RelativeLayout>

    <!-- button -->
    <Button android:id="@+id/epcalculate_button_calculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_bg_yellow"
        android:text="@string/ep_btn_afa"
        android:textColor="@color/white"
        android:textStyle="bold" />

</LinearLayout>
