<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:orientation="vertical"
    tools:context="id.astrajingga.monicca.features.ep.EpMain">

    <include layout="@layout/main_appbar_container" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="center">

        <!-- background photo -->
        <ImageView
            android:contentDescription="@string/ep_desc_img"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/img_cover_education_plan" />

        <!-- title -->
        <TextView android:id="@+id/ep_text_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="8dp"
            android:text="@string/ep_text_title"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"
            android:textAppearance="?android:textAppearanceMedium" />

        <!-- line -->
        <View
            android:id="@+id/line"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_below="@id/ep_text_logo"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:background="@color/white" />

        <!-- desc -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@id/line"
            android:layout_marginEnd="32dp"
            android:textColor="@color/white"
            android:layout_below="@id/line"
            android:text="@string/ep_text_desc" />

    </RelativeLayout>

    <!-- button -->
    <Button android:id="@+id/epmain_button_start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_bg_yellow"
        android:text="@string/ep_btn_start"
        android:textColor="@color/white"
        android:textStyle="bold" />

</LinearLayout>
